# Graphics_Course_Template_Project

./: README.md
Cpp_Example/: .gitignore  CMakeLists.txt
Cpp_Example/Source/: Main.cpp
Cpp_Example/Source/Engine/: Application.cpp  Application.h
Cpp_Example/Source/Engine/Core/: Component.cpp  Component.h  ComponentOptimizer.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
Cpp_Example/Source/Engine/Core/System/Rendering/: Camera.cpp  Camera.h  MeshRendering.cpp  MeshRendering.h  RenderingSystem.cpp  RenderingSystem.h
Cpp_Example/Source/Engine/Core/System/Rendering/Data/: CommonModels.h  CommonShaders.h
Cpp_Example/Source/Engine/Core/System/Rendering/Utils/: CommonModels.h  CommonShaders.h  Material.h  Shader.h  Texture.h
